fix(ripple): Add overflow: hidden; to the bounded ripple mixin (#5173)

--- a/packages/mdc-ripple/_mixins.scss
+++ b/packages/mdc-ripple/_mixins.scss
@@ -392,6 +392,7 @@
       left: calc(50% - #{$radius});
       width: $radius * 2;
       height: $radius * 2;
+      overflow: hidden;
     }
   }
 
